fixed col spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
-/* generics */ 
 
-body{
+/* generics */ 
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body{
     font-family: 'PT Sans', sans-serif;
     padding-top: 70px;
 }
@@ -21,11 +24,10 @@ footer{
 
 .col{
     height: 400px;
-    margin-bottom: 20px;
+    padding: 10px;
 }
 
 .card{
-    margin: 20px;
     border-radius: 30px;
     height: 100%;
 }
@@ -59,10 +61,6 @@ footer{
 
 .section{
     padding: 50px 0;
-}
-
-.row.gutter{
-    margin: 0 -20px;
 }
 /* header */
 
